# pyron

./: Cargo.toml  LICENSE.md  run.sh
assets/raw/: a10.xcf  bullet.xcf  enemy.xcf  player.xcf
src/: main.rs
